[package]
name = "winaudit"
version = "0.1.1"
edition = "2024"
description = "Advanced Windows auditing and security assessment Crate in Rust"
license = "MIT"
repository = "https://github.com/HackingRepo/winaudit-rs"
categories = ["security", "os::windows"]
keywords = ["assessment", "windows", "audit", "security"]
readme = "README.md"
authors = [
    "RelunSec"
]


[dependencies]
ash = "0.38.0"
widestring = "1.2.1"
windows-core = "0.62.2"
winreg = "0.55.0"
[dependencies.windows]
version = "0.62.2"
features = [
    "Win32_System_SystemInformation",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_Threading",
    "Win32_System_Kernel",
    "Win32_Foundation",
    "Win32_System_SystemServices",
    "Win32_System_WindowsProgramming",
    "Win32_System_Registry",
    "Win32_System_EventLog",
    "Win32_System_Services",
    "Win32_Security",
    "Win32_Security_Cryptography",
    "Win32_NetworkManagement",
    "Win32_NetworkManagement_NetManagement",
    "Win32_Storage",
    "Win32_Storage_FileSystem",
    "Win32_System_Ioctl",
    "Win32_System_Com",
    "Win32_System_UpdateAgent",
    "Win32_Devices",
    "Win32_Devices_Bluetooth",
    "Win32_NetworkManagement_WiFi",
    "Win32_System_IO"
]

[features]
experimental = []
